syntax = "proto3";

option csharp_namespace = "grpcUnaryServer";

package unary;

service Unary {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string name = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
}
